snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.pom.sha512
1448019caa4b5f5dc4ce3c97cd5cd44481e2fb73e780e3946870c320f49c4955bb86b1ff7697d8b91fded782d1f6a44ad2cc930bc5d8e7e4f8772397db237ec1